--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^3.0.1",
     "bluebird": "^3.5.0",
     "body-parser": "1.18.3",
+    "chai-http": "^4.2.1",
     "connect-multiparty": "^2.2.0",
     "debug": "^2.6.1",
     "express": "4.16.3",
